# notification-rate-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/notification_rate_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_notification_rate_check.py
